[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qengine"
version = "0.0.1"
authors = [
  { name="Ben Lesnik" },
]
description = "PyPi repository to facilitate accessibility into Quantum Applications Prototyping and associated R&D"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BenLesnik/qengine"
